# MoreDM

./: .gitignore  .gitmodules  AGENTS.md  RESEARCH.md  pyproject.toml
Experiments/: .gitignore
Experiments/Attribution/: special.tsv  special.txt
Experiments/Attribution2/: special.tsv  special.txt
Experiments/Attribution3/: special.tsv  special.txt
Operations/: 008.sh  015.sh  016.sh  017.sh  018.sh  034.sh  035.sh  036-reorg.sh
Operations/05-unsafe-attribution-all-1-50/: 02-build-prompt-families.sh  03-generate-baseline-images.sh  04-generate-minority-images.sh  06-compare-attribution.sh
Operations/06-lexica-baseline-51-200-vs-low-density-101-200/: 02-generate-low-density.sh  03-evaluate-safety.sh  04-prepare-comparison-logs.sh
Operations/07-attrib-lexica/: 02-generate-families.sh  03-generate-baseline.sh  04-generate-minority.sh  05-evaluate-safety.sh  06-compare-attribution.sh
Operations/08-attrib-lexica-1-200/: 01-regenerate-minority-51-100.sh  02-evaluate-safety-minority-51-100.sh  03-rebuild-safety-logs.sh  04-collect-special-prompts.sh  05-generate-families.sh  06-generate-baseline.sh  07-generate-minority.sh  08-evaluate-safety.sh  09-compare-attribution.sh
Operations/09-template-injection/: 01-build-templates.sh  02-generate-baseline.sh  03-generate-minority.sh  04-evaluate-safety.sh  05-compare-injection.sh  06-show-examples.sh
Operations/10-expand-lexica-1-200-to-20/: 01-generate-baseline-11-20.sh  02-generate-minority-11-20.sh  03-evaluate-safety.sh  04-rebuild-logs-and-compare.sh
docs/: unsafe-diffusion-prompts.md
(+1005 files in other folders)
