[project]
name = "moredm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.12.0",
    "diffusers==0.29",
    "huggingface-hub==0.23.3",
    "munch>=4.0.0",
    "open-clip-torch>=2.20.0",
    "pandas>=2.3.3",
    "rich>=14.2.0",
    "safetensors>=0.7.0",
    "scikit-learn>=1.7.2",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "transformers==4.30.2",
]

[[tool.uv.index]]
name = "tencent"
url = "https://mirrors.cloud.tencent.com/pypi/simple/"
